fix(ci): add musl workflow to branch and support dynamic compiler in buildLinuxPlayerBridge