@@ -16,6 +16,7 @@ import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import java.io.File
+import java.net.URL
 import java.util.Properties
 import javax.inject.Inject
 
@@ -310,6 +311,15 @@ fun newestDirectory(root: File): File? =
     root.takeIf(File::exists)
         ?.listFiles(File::isDirectory)
         ?.maxByOrNull { semanticVersionSortKey(it.name) }
+
+fun List<String>.runCommand(): String? {
+    return try {
+        val proc = ProcessBuilder(this)
+            .redirectErrorStream(true)
+            .start()
+        proc.inputStream.bufferedReader().readText().trim().takeIf { it.isNotEmpty() }
+    } catch (_: Exception) { null }
+}
 
 fun jpackageCompatibleVersion(version: String): String {
     val versionCore = version.substringBefore('-').substringBefore('+').trim()
@@ -777,6 +787,47 @@ val buildWindowsPlayerBridge = tasks.register<Exec>("buildWindowsPlayerBridge") 
     commandLine(windowsPlayerBridgeCommand)
 }
 
+val linuxPlayerRuntimeSource = layout.projectDirectory.dir("src/desktopMain/native/linux/live")
+val linuxPlayerRuntimeOutput = layout.buildDirectory.dir("native/linux-runtime")
+val linuxPlayerBridgeSource = layout.projectDirectory.file("src/desktopMain/native/linux/player_bridge.c")
+val linuxPlayerBridgeOutput = layout.buildDirectory.file("native/linux/libplayer_bridge.so")
+if (isLinuxHost) {
+    linuxPlayerBridgeOutput.get().asFile.parentFile.mkdirs()
+}
+val linuxPlayerBridgeJavaHome = providers.systemProperty("java.home").get()
+val buildLinuxPlayerBridge = tasks.register<Exec>("buildLinuxPlayerBridge") {
+    notCompatibleWithConfigurationCache("Builds a host-local player bridge for Linux.")
+    enabled = isLinuxHost
+    inputs.file(linuxPlayerBridgeSource)
+    outputs.file(linuxPlayerBridgeOutput)
+    doFirst {
+        val javaHome = linuxPlayerBridgeJavaHome
+        val javaIncludes = "-I${javaHome}/include -I${javaHome}/include/linux"
+        val linuxCc = providers.gradleProperty("linuxCc").getOrElse("gcc")
+        val extraCflags = providers.gradleProperty("linuxCflags").getOrElse("")
+        val mpvPkg = "mpv"
+        val cflags = try {
+            listOf("pkg-config", "--cflags", mpvPkg).runCommand()?.trim() ?: ""
+        } catch (_: Exception) { "" }
+        val libs = try {
+            listOf("pkg-config", "--libs", mpvPkg).runCommand()?.trim() ?: ""
+        } catch (_: Exception) { "" }
+        val sourceFile = linuxPlayerBridgeSource.asFile
+        val outputFile = linuxPlayerBridgeOutput.get().asFile
+        commandLine(
+            linuxCc, "-shared", "-fPIC",
+            "-Wl,-rpath,'\$ORIGIN'",
+            "-o", outputFile.absolutePath,
+            sourceFile.absolutePath,
+            *javaIncludes.split(" ").filter { it.isNotBlank() }.toTypedArray(),
+            *extraCflags.split(" ").filter { it.isNotBlank() }.toTypedArray(),
+            *cflags.split(" ").filter { it.isNotBlank() }.toTypedArray(),
+            *libs.split(" ").filter { it.isNotBlank() }.toTypedArray(),
+            "-lm",
+        )
+    }
+}
+
 val prepareWindowsPlayerRuntime = tasks.register<Sync>("prepareWindowsPlayerRuntime") {
     enabled = isWindowsHost
     into(windowsPlayerRuntimeOutput)
@@ -786,15 +837,16 @@ val prepareWindowsPlayerRuntime = tasks.register<Sync>("prepareWindowsPlayerRunt
     windowsCppRuntimeDlls.forEach { dllFile ->
         from(dllFile)
     }
-    when {
-        windowsLibmpvRuntimeDir?.exists() == true -> {
-            from(windowsLibmpvRuntimeDir) {
-                include("*.dll")
-            }
+    // Bundle libmpv-2.dll from the bundled runtime directory or from overrides
+    val libmpvSource = windowsLibmpvDll
+        ?: windowsLibmpvRuntimeDir?.let { dir ->
+            val dll = dir.resolve("libmpv-2.dll")
+            dll.takeIf(File::exists)
         }
-        windowsLibmpvDll?.exists() == true -> {
-            from(windowsLibmpvDll)
-        }
+    if (libmpvSource?.exists() == true) {
+        from(libmpvSource)
+    } else {
+        logger.warn("libmpv-2.dll not found. Pass -Pnuvio.windows.libmpv.runtimeDir=C:/path/to/mpv-dlls or bundle it under src/desktopMain/native/windows/runtime/")
     }
 }
 
@@ -824,6 +876,43 @@ abstract class GenerateNativeRuntimeIndexTask : DefaultTask() {
     }
 }
 
+val prepareLinuxPlayerRuntime = tasks.register<Sync>("prepareLinuxPlayerRuntime") {
+    enabled = isLinuxHost
+    into(linuxPlayerRuntimeOutput)
+    if (linuxPlayerRuntimeSource.asFile.isDirectory) {
+        from(linuxPlayerRuntimeSource) {
+            include("*.so*")
+        }
+    }
+}
+
+val generateLinuxPlayerRuntimeIndex = tasks.register<GenerateNativeRuntimeIndexTask>("generateLinuxPlayerRuntimeIndex") {
+    enabled = isLinuxHost
+    dependsOn(prepareLinuxPlayerRuntime)
+    runtimeDir.set(linuxPlayerRuntimeOutput)
+    indexFile.set(linuxPlayerRuntimeOutput.map { it.file("runtime-files.txt") })
+}
+
+val torrserverOutputDir = layout.buildDirectory.dir("native/torrserver")
+
+val downloadTorrserver = tasks.register("downloadTorrserver") {
+    enabled = isLinuxHost
+    val outputFile = torrserverOutputDir.get().file("torrserver").asFile
+    outputs.file(outputFile)
+    doLast {
+        outputFile.parentFile.mkdirs()
+        val url = URL("https://github.com/YouROK/TorrServer/releases/latest/download/TorrServer-linux-amd64")
+        logger.lifecycle("Downloading TorrServer for Linux from $url")
+        url.openStream().use { input ->
+            outputFile.outputStream().use { output ->
+                input.copyTo(output)
+            }
+        }
+        outputFile.setExecutable(true)
+        logger.lifecycle("TorrServer downloaded to ${outputFile.absolutePath}")
+    }
+}
+
 tasks.withType<Jar>().configureEach {
     if (isMacHost && name == "desktopJar") {
         dependsOn(buildMacosPlayerBridge)
@@ -840,33 +929,57 @@ tasks.withType<Jar>().configureEach {
             into("native/windows")
         }
     }
+    if (isLinuxHost && name == "desktopJar") {
+        dependsOn(buildLinuxPlayerBridge, prepareLinuxPlayerRuntime, generateLinuxPlayerRuntimeIndex, downloadTorrserver)
+        from(linuxPlayerBridgeOutput) {
+            into("native/linux")
+        }
+        from(linuxPlayerRuntimeOutput) {
+            into("native/linux")
+        }
+        from(torrserverOutputDir) {
+            into("native/torrserver")
+        }
+    }
 }
 
+val desktopNativePlayerTasks = setOf(
+    "run",
+    "runRelease",
+    "desktopRun",
+    "runDistributable",
+    "runReleaseDistributable",
+    "desktopRunHot",
+    "hotRunDesktop",
+    "hotRunDesktopAsync",
+    "hotDevDesktop",
+    "hotDevDesktopAsync",
+    "createDistributable",
+    "createReleaseDistributable",
+    "createRuntimeImage",
+    "package",
+    "packageDistributionForCurrentOS",
+    "packageMsi",
+    "packageUberJarForCurrentOS",
+    "packageReleaseDistributionForCurrentOS",
+    "packageReleaseMsi",
+    "packageReleaseUberJarForCurrentOS",
+)
+val linuxNativePlayerTasks = desktopNativePlayerTasks + setOf(
+    "packageDeb", "packageReleaseDeb",
+    "packageRpm", "packageReleaseRpm",
+    "packageAppImage", "packageReleaseAppImage",
+    "buildAppImage",
+    "patchLinuxDebDependencies",
+)
 if (isWindowsHost) {
-    val desktopNativePlayerTasks = setOf(
-        "run",
-        "runRelease",
-        "desktopRun",
-        "runDistributable",
-        "runReleaseDistributable",
-        "desktopRunHot",
-        "hotRunDesktop",
-        "hotRunDesktopAsync",
-        "hotDevDesktop",
-        "hotDevDesktopAsync",
-        "createDistributable",
-        "createReleaseDistributable",
-        "createRuntimeImage",
-        "package",
-        "packageDistributionForCurrentOS",
-        "packageMsi",
-        "packageUberJarForCurrentOS",
-        "packageReleaseDistributionForCurrentOS",
-        "packageReleaseMsi",
-        "packageReleaseUberJarForCurrentOS",
-    )
     tasks.matching { it.name in desktopNativePlayerTasks }.configureEach {
         dependsOn(buildWindowsPlayerBridge, prepareWindowsPlayerRuntime, generateWindowsPlayerRuntimeIndex)
+    }
+}
+if (isLinuxHost) {
+    tasks.matching { it.name in linuxNativePlayerTasks }.configureEach {
+        dependsOn(buildLinuxPlayerBridge, prepareLinuxPlayerRuntime, generateLinuxPlayerRuntimeIndex, downloadTorrserver)
     }
 }
 
@@ -1009,6 +1122,7 @@ kotlin {
             implementation(libs.supabase.auth)
             implementation(libs.supabase.functions)
             implementation(libs.reorderable)
+            implementation(libs.kotlinx.atomicfu)
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
@@ -1027,11 +1141,23 @@ compose.desktop {
             "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
             "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
             "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
             smokePlayerUrl?.takeIf { it.isNotBlank() }?.let { "-Dnuvio.desktop.smokePlayerUrl=$it" },
+            // ── Memory management ──
+            "-Xms256m",
+            "-Xmx2g",
+            "-XX:+UseG1GC",
+            "-XX:MaxGCPauseMillis=100",
+            "-XX:+UseStringDeduplication",
+            "-XX:SoftRefLRUPolicyMSPerMB=50",
+            // ── Linux: mpv renders directly via X11 wid + OpenGL, no SW copy ──
+            "-Dskiko.renderApi=OPENGL",
+            // ── Wayland support: auto-detect display server ──
+            "-Djdk.ozone.platform.hint=auto",
         )
 
         nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb, TargetFormat.AppImage)
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb, TargetFormat.Rpm, TargetFormat.AppImage)
             packageName = "Nuvio"
             packageVersion = desktopReleasePackageVersion
             vendor = "Nuvio Media"
@@ -1071,11 +1197,139 @@ compose.desktop {
             }
             linux {
                 iconFile.set(project.file("src/desktopMain/resources/icons/nuvio-app-icon.png"))
+                rpmLicenseType = "Proprietary"
             }
         }
 
         buildTypes.release.proguard {
             isEnabled.set(false)
+        }
+    }
+}
+
+val patchLinuxDebDependencies = tasks.register("patchLinuxDebDependencies") {
+    notCompatibleWithConfigurationCache("Patches DEB control file to add runtime dependencies.")
+    enabled = isLinuxHost
+    dependsOn("packageReleaseDeb")
+    doLast {
+        val debDir = layout.buildDirectory.dir("compose/binaries/main-release/deb").get().asFile
+        val debFiles = debDir.listFiles { f -> f.extension == "deb" }.orEmpty()
+        if (debFiles.isEmpty()) {
+            logger.warn("No .deb files found in ${debDir.absolutePath}")
+            return@doLast
+        }
+        for (deb in debFiles) {
+            val workDir = File(debDir, "deb-patch-${deb.nameWithoutExtension}")
+            val scriptFile = rootProject.file("scripts/patch-deb-deps.sh")
+
+            val pb = ProcessBuilder("bash", scriptFile.absolutePath, deb.absolutePath, workDir.absolutePath)
+            pb.redirectErrorStream(true)
+            val proc = pb.start()
+            val output = proc.inputStream.bufferedReader().readText()
+            val exitCode = proc.waitFor()
+            if (exitCode != 0) {
+                logger.error("DEB patching failed (exit $exitCode): $output")
+            } else {
+                logger.lifecycle("Patched DEB dependencies: ${deb.name}")
+            }
+        }
+    }
+}
+
+val buildAppImage = tasks.register<Exec>("buildAppImage") {
+    notCompatibleWithConfigurationCache("Packages the unpacked app directory into an AppImage using linuxdeploy + appimagetool.")
+    enabled = isLinuxHost
+    dependsOn("packageReleaseAppImage")
+    val appDir = layout.buildDirectory.dir("compose/binaries/main-release/app/Nuvio").get().asFile
+    val appImageOutput = layout.buildDirectory.file("compose/binaries/main-release/appimage/Nuvio-${desktopReleaseVersionName}-x86_64.AppImage")
+    val updateInfo = "gh-releases-zsync|aelrased|NuvioDesktop|latest|Nuvio-*x86_64.AppImage.zsync"
+    outputs.file(appImageOutput)
+    doFirst {
+        if (!appDir.exists()) {
+            error("App directory not found: ${appDir.absolutePath}. Run packageReleaseAppImage first.")
+        }
+        val desktopFile = appDir.resolve("Nuvio.desktop")
+        desktopFile.writeText("""
+            [Desktop Entry]
+            Name=Nuvio
+            Exec=Nuvio
+            Icon=Nuvio
+            Type=Application
+            Categories=AudioVideo;Video;Player;
+            Comment=Nuvio Media Player
+            Terminal=false
+            StartupWMClass=com-nuvio-app-MainKt
+            X-AppImage-UpdateInformation=$updateInfo
+            X-AppImage-Architecture=x86_64
+            X-AppImage-AppStream=true
+        """.trimIndent())
+        appDir.resolve("AppRun").apply {
+            writeText(
+                "#!/bin/bash\n" +
+                "dir=\"$(dirname \"$(readlink -f \"\$0\")\")\"\n" +
+                "export LD_LIBRARY_PATH=\"\$dir/lib:\$dir/lib64:\${LD_LIBRARY_PATH:-}\"\n" +
+                "exec \"\$dir/bin/Nuvio\" \"\$@\"\n"
+            )
+            setExecutable(true)
+        }
+        val iconFile = project.file("src/desktopMain/resources/icons/nuvio-app-icon.png")
+        if (iconFile.exists()) {
+            iconFile.copyTo(appDir.resolve("Nuvio.png"), overwrite = true)
+        }
+
+        // Include AppStream metainfo
+        val metainfoSource = project.file("src/desktopMain/resources/metainfo/com.nuvio.media.desktop.metainfo.xml")
+        if (metainfoSource.exists()) {
+            val metainfoDir = appDir.resolve("usr/share/metainfo")
+            metainfoDir.mkdirs()
+            metainfoSource.copyTo(metainfoDir.resolve("com.nuvio.media.desktop.metainfo.xml"), overwrite = true)
+            logger.lifecycle("Included AppStream metainfo in AppImage")
+        }
+
+        appImageOutput.get().asFile.parentFile.mkdirs()
+
+        // Bundle libmpv and its dependencies using linuxdeploy if available
+        val linuxdeploy = listOf("which", "linuxdeploy").runCommand()?.trim()?.takeIf { it.isNotBlank() }
+        if (linuxdeploy != null) {
+            logger.lifecycle("Using linuxdeploy to bundle native libraries into AppImage")
+        }
+    }
+    workingDir(appImageOutput.get().asFile.parentFile)
+    commandLine(
+        "appimagetool",
+        "--appimage-extract-and-run",
+        "--updateinformation", updateInfo,
+        appDir.absolutePath,
+        appImageOutput.get().asFile.absolutePath,
+    )
+    environment("ARCH", "x86_64")
+}
+
+val patchLinuxRpmDependencies = tasks.register("patchLinuxRpmDependencies") {
+    notCompatibleWithConfigurationCache("Patches RPM spec to add runtime dependencies.")
+    enabled = isLinuxHost
+    dependsOn("packageReleaseRpm")
+    doLast {
+        val rpmDir = layout.buildDirectory.dir("compose/binaries/main-release/rpm").get().asFile
+        val rpmFiles = rpmDir.listFiles { f -> f.extension == "rpm" }.orEmpty()
+        if (rpmFiles.isEmpty()) {
+            logger.warn("No .rpm files found in ${rpmDir.absolutePath}")
+            return@doLast
+        }
+        for (rpm in rpmFiles) {
+            val workDir = File(rpmDir, "rpm-patch-${rpm.nameWithoutExtension}")
+            val scriptFile = rootProject.file("scripts/patch-rpm-deps.sh")
+
+            val pb = ProcessBuilder("bash", scriptFile.absolutePath, rpm.absolutePath, workDir.absolutePath)
+            pb.redirectErrorStream(true)
+            val proc = pb.start()
+            val output = proc.inputStream.bufferedReader().readText()
+            val exitCode = proc.waitFor()
+            if (exitCode != 0) {
+                logger.error("RPM patching failed (exit $exitCode): $output")
+            } else {
+                logger.lifecycle("Patched RPM dependencies: ${rpm.name}")
+            }
         }
     }
 }
@@ -1210,125 +1464,4 @@ configurations.matching { it.name == "iosMainImplementation" }.configureEach {
 configurations.all {
     exclude(group = "androidx.media3", module = "media3-exoplayer")
     exclude(group = "androidx.media3", module = "media3-ui")
-}
-
-/* ── Linux native player bridge ── */
-fun List<String>.runCommand(): String? =
-    ProcessBuilder(this)
-        .redirectErrorStream(true)
-        .start()
-        .inputStream.bufferedReader().readText()
-        .takeIf { it.isNotBlank() }
-
-val linuxPlayerBridgeSource = layout.projectDirectory.file("src/desktopMain/native/linux/player_bridge.c")
-val linuxPlayerBridgeOutput = layout.buildDirectory.file("native/linux/libplayer_bridge.so")
-val linuxPlayerRuntimeSource = layout.projectDirectory.dir("src/desktopMain/native/linux/live")
-val linuxPlayerRuntimeOutput = layout.buildDirectory.dir("native/linux-runtime")
-
-if (isLinuxHost) {
-    linuxPlayerBridgeOutput.get().asFile.parentFile.mkdirs()
-}
-
-val linuxPlayerBridgeJavaHome = providers.systemProperty("java.home").get()
-
-val linuxCc = providers.gradleProperty("linuxCc").getOrElse("gcc")
-val linuxCflags = providers.gradleProperty("linuxCflags").getOrElse("")
-
-val buildLinuxPlayerBridge = tasks.register<Exec>("buildLinuxPlayerBridge") {
-    enabled = isLinuxHost
-    val srcFile = linuxPlayerBridgeSource.asFile
-    val outFile = linuxPlayerBridgeOutput.get().asFile
-    val javaHome = linuxPlayerBridgeJavaHome
-    val cc = linuxCc
-    val extraCflags = linuxCflags
-
-    inputs.file(linuxPlayerBridgeSource)
-    inputs.property("cc", linuxCc)
-    inputs.property("cflags", linuxCflags)
-    outputs.file(linuxPlayerBridgeOutput)
-    doFirst {
-        val javaIncludes = "-I${javaHome}/include -I${javaHome}/include/linux"
-        val mpvPkg = "mpv"
-        val cflagsOut = try {
-            ProcessBuilder("pkg-config", "--cflags", mpvPkg)
-                .redirectErrorStream(true)
-                .start()
-                .inputStream.bufferedReader().readText()
-                .trim().takeIf { it.isNotBlank() } ?: ""
-        } catch (_: Exception) { "" }
-        val libs = try {
-            ProcessBuilder("pkg-config", "--libs", mpvPkg)
-                .redirectErrorStream(true)
-                .start()
-                .inputStream.bufferedReader().readText()
-                .trim().takeIf { it.isNotBlank() } ?: ""
-        } catch (_: Exception) { "" }
-        val extraFlags = extraCflags.split(" ").filter { it.isNotBlank() }
-        commandLine(
-            cc, "-shared", "-fPIC",
-            "-Wl,-rpath,'\$ORIGIN'",
-            "-o", outFile.absolutePath,
-            srcFile.absolutePath,
-            *javaIncludes.split(" ").filter { it.isNotBlank() }.toTypedArray(),
-            *cflagsOut.split(" ").filter { it.isNotBlank() }.toTypedArray(),
-            *libs.split(" ").filter { it.isNotBlank() }.toTypedArray(),
-            "-lm",
-            *extraFlags.toTypedArray(),
-        )
-    }
-}
-
-val prepareLinuxPlayerRuntime = tasks.register<Sync>("prepareLinuxPlayerRuntime") {
-    enabled = isLinuxHost
-    into(linuxPlayerRuntimeOutput)
-    if (linuxPlayerRuntimeSource.asFile.isDirectory) {
-        from(linuxPlayerRuntimeSource)
-    }
-}
-
-val generateLinuxPlayerRuntimeIndex = tasks.register<GenerateNativeRuntimeIndexTask>("generateLinuxPlayerRuntimeIndex") {
-    enabled = isLinuxHost
-    dependsOn(prepareLinuxPlayerRuntime)
-    runtimeDir.set(linuxPlayerRuntimeOutput)
-    indexFile.set(linuxPlayerRuntimeOutput.map { it.file("runtime-files.txt") })
-}
-
-tasks.withType<Jar>().configureEach {
-    if (isLinuxHost && name == "desktopJar") {
-        dependsOn(buildLinuxPlayerBridge, prepareLinuxPlayerRuntime, generateLinuxPlayerRuntimeIndex)
-        from(linuxPlayerBridgeOutput) {
-            into("native/linux")
-        }
-        from(linuxPlayerRuntimeOutput) {
-            into("native/linux")
-        }
-    }
-}
-
-if (isLinuxHost) {
-    val linuxNativePlayerTasks = setOf(
-        "run",
-        "runRelease",
-        "desktopRun",
-        "runDistributable",
-        "runReleaseDistributable",
-        "desktopRunHot",
-        "hotRunDesktop",
-        "hotRunDesktopAsync",
-        "hotDevDesktop",
-        "hotDevDesktopAsync",
-        "createDistributable",
-        "createReleaseDistributable",
-        "createRuntimeImage",
-        "package",
-        "packageDistributionForCurrentOS",
-        "packageDeb",
-        "packageUberJarForCurrentOS",
-        "packageReleaseDistributionForCurrentOS",
-        "packageReleaseDeb",
-        "packageReleaseUberJarForCurrentOS",
-    )
-    tasks.matching { it.name in linuxNativePlayerTasks }.configureEach {
-        dependsOn(buildLinuxPlayerBridge, prepareLinuxPlayerRuntime, generateLinuxPlayerRuntimeIndex)
-    }
 }
